syntax = "proto3";
option java_multiple_files = true;
package com.ros.control.server;
import "google/protobuf/wrappers.proto";  // Import the StringValue type

service Getter {
    rpc getConfig (ConfigRequest) returns (ConfigReply); 
}

message ConfigRequest {
    string message = 1;
}

message ConfigReply {
    google.protobuf.StringValue id = 1;
    int32 port = 2;
    string hostname = 3;
    string username = 4;
    string password = 5;
}